# zsq_prompt

./: LICENSE  README.md  __init__.py  config.py  promptStyle.js  prompt_weight.json  pyproject.toml  requirements.txt  zsq_image.py  zsq_llm.py  zsq_loader.py  zsq_prompt.py  zsq_utils.py
fooocus/: fooocus_styles.json
nodes/: person_mask_ultra_v2.py  segformer_ultra.py  zsq_face.py  zsq_image.py  zsq_llm.py  zsq_loader.py  zsq_prompt.py  zsq_utils.py
nodes/libs/: face.py  image.py  latent.py  utils.py
style/: 01摄影风格.json  01特征.json  01风格.json  02天气场所.json  02景观.json  02视角.json  03国籍.json  03场所.json  03天气.json  04服装.json  04脸型.json  05体型.json  06发型.json  06头发颜色.json  07嘴唇形状.json  07嘴唇颜色.json  07眼睛形状.json  07眼睛颜色.json  08化妆.json  09表情.json  10姿势.json  11服装.json  11服装材质.json  11服装颜色.json  12帽子围巾.json  12袜子鞋子.json  13光源.json  13光线.json  15景深.json  15相机.json  16其它.json
styles/: fooocus_styles.json
web/js/: PortraitStyler.js  Selector.js  app.js  contextMenuHook.js  showText.js  widgets.js
web/js/common/: i18n.js  utils.js
